--- a/icontest/icontest/MainPage.xaml
+++ b/icontest/icontest/MainPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:iconize="clr-namespace:FormsPlugin.Iconize;assembly=FormsPlugin.Iconize"
              xmlns:local="clr-namespace:icontest"
-             x:Class="icontest.MainPage">
+             x:Class="icontest.MainPage"
+             Icon="icon.png">
 
     <ContentPage.ToolbarItems>
         <iconize:IconToolbarItem Icon="fa-map-o" />
